@@ -850,12 +850,22 @@
         {
           "type": "unsigned char *",
           "name": "boneIds",
-          "description": "Vertex bone ids, max 255 bone ids, up to 4 bones influence by vertex (skinning)"
+          "description": "Vertex bone ids, max 255 bone ids, up to 4 bones influence by vertex (skinning) (shader-location = 6)"
         },
         {
           "type": "float *",
           "name": "boneWeights",
-          "description": "Vertex bone weight, up to 4 bones influence by vertex (skinning)"
+          "description": "Vertex bone weight, up to 4 bones influence by vertex (skinning) (shader-location = 7)"
+        },
+        {
+          "type": "Matrix *",
+          "name": "boneMatrices",
+          "description": "Bones animated transformation matrices"
+        },
+        {
+          "type": "int",
+          "name": "boneCount",
+          "description": "Number of bones"
         },
         {
           "type": "unsigned int",
@@ -2518,6 +2528,21 @@
           "name": "SHADER_LOC_MAP_BRDF",
           "value": 25,
           "description": "Shader location: sampler2d texture: brdf"
+        },
+        {
+          "name": "SHADER_LOC_VERTEX_BONEIDS",
+          "value": 26,
+          "description": "Shader location: vertex attribute: boneIds"
+        },
+        {
+          "name": "SHADER_LOC_VERTEX_BONEWEIGHTS",
+          "value": 27,
+          "description": "Shader location: vertex attribute: boneWeights"
+        },
+        {
+          "name": "SHADER_LOC_BONE_MATRICES",
+          "value": 28,
+          "description": "Shader location: array of matrices uniform: boneMatrices"
         }
       ]
     },
@@ -4478,6 +4503,17 @@
       "returnType": "const char *"
     },
     {
+      "name": "MakeDirectory",
+      "description": "Create directories (including full path requested), returns 0 on success",
+      "returnType": "int",
+      "params": [
+        {
+          "type": "const char *",
+          "name": "dirPath"
+        }
+      ]
+    },
+    {
       "name": "ChangeDirectory",
       "description": "Change working directory, return true on success",
       "returnType": "bool",
@@ -4523,7 +4559,7 @@
     },
     {
       "name": "LoadDirectoryFilesEx",
-      "description": "Load directory filepaths with extension filtering and recursive directory scan. Use \"/DIR\" in the filter string to include directories in the result",
+      "description": "Load directory filepaths with extension filtering and recursive directory scan. Use 'DIR' in the filter string to include directories in the result",
       "returnType": "FilePathList",
       "params": [
         {
@@ -5238,7 +5274,7 @@
     },
     {
       "name": "DrawPixel",
-      "description": "Draw a pixel",
+      "description": "Draw a pixel using geometry [Can be slow, use with care]",
       "returnType": "void",
       "params": [
         {
@@ -5257,7 +5293,7 @@
     },
     {
       "name": "DrawPixelV",
-      "description": "Draw a pixel (Vector version)",
+      "description": "Draw a pixel using geometry (Vector version) [Can be slow, use with care]",
       "returnType": "void",
       "params": [
         {
@@ -6776,25 +6812,6 @@
         {
           "type": "int",
           "name": "headerSize"
-        }
-      ]
-    },
-    {
-      "name": "LoadImageSvg",
-      "description": "Load image from SVG file data or string with specified size",
-      "returnType": "Image",
-      "params": [
-        {
-          "type": "const char *",
-          "name": "fileNameOrString"
-        },
-        {
-          "type": "int",
-          "name": "width"
-        },
-        {
-          "type": "int",
-          "name": "height"
         }
       ]
     },
@@ -11063,6 +11080,25 @@
         {
           "type": "ModelAnimation",
           "name": "anim"
+        }
+      ]
+    },
+    {
+      "name": "UpdateModelAnimationBoneMatrices",
+      "description": "Update model animation mesh bone matrices (Note GPU skinning does not work on Mac)",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Model",
+          "name": "model"
+        },
+        {
+          "type": "ModelAnimation",
+          "name": "anim"
+        },
+        {
+          "type": "int",
+          "name": "frame"
         }
       ]
     },
