@@ -148,6 +148,7 @@
     , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_COLOR" : "3"
     , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TANGENT" : "4"
     , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_TEXCOORD2" : "5"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_INDICES" : "6"
     , "RL_SHADER_LOC_MAP_DIFFUSE" : null
     , "RL_SHADER_LOC_MAP_SPECULAR" : null
     , "CONFIG_H" : null
@@ -180,7 +181,9 @@
     , "MAX_CHAR_PRESSED_QUEUE" : "16"
     , "MAX_DECOMPRESSION_SIZE" : "64"
     , "MAX_AUTOMATION_EVENTS" : "16384"
-    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_INDICES" : "6"
+    , "RL_SUPPORT_MESH_GPU_SKINNING" : null
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_BONEIDS" : "7"
+    , "RL_DEFAULT_SHADER_ATTRIB_LOCATION_BONEWEIGHTS" : "8"
     , "RL_DEFAULT_SHADER_ATTRIB_NAME_POSITION" : "\"vertexPosition\""
     , "RL_DEFAULT_SHADER_ATTRIB_NAME_TEXCOORD" : "\"vertexTexCoord\""
     , "RL_DEFAULT_SHADER_ATTRIB_NAME_NORMAL" : "\"vertexNormal\""
@@ -220,7 +223,7 @@
     , "SUPPORT_FILEFORMAT_M3D" : "1"
     , "SUPPORT_MESH_GENERATION" : "1"
     , "MAX_MATERIAL_MAPS" : "12"
-    , "MAX_MESH_VERTEX_BUFFERS" : "7"
+    , "MAX_MESH_VERTEX_BUFFERS" : "9"
     , "SUPPORT_FILEFORMAT_WAV" : "1"
     , "SUPPORT_FILEFORMAT_OGG" : "1"
     , "SUPPORT_FILEFORMAT_MP3" : "1"
